Emmaus/wwwroot/css/style.css
html {
    height: 100%
}

body {
    width: 100%;
    height: 100%;
    background-size: cover;
    margin: 0 auto;
    background-color: #DDDDDD;
    /*background-image: url("../images/blueSky50%.jpg");*/

    background-attachment: fixed
}

.wrapper .mainWrapper a {
    text-decoration: none;
}

    .wrapper .mainWrapper a:hover {
        text-decoration: underline;
    }

    .wrapper .mainWrapper a:visited {
        color: blue;
    }

.wrapper {
    height: 100vh;
    display: grid;
    grid-template-rows: 80px 1fr auto;
    grid-template-columns: 1fr 10fr 1fr;
}

    .wrapper .navBarContainer {
        position: sticky;
        top: 0px;
        height: 80px;
        background-color: whitesmoke;
        grid-row: 1;
        grid-column: 1 / span 3;
        display: grid;
        grid-template-rows: 1fr;
        grid-template-columns: 300px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    }

        .wrapper .navBarContainer .mainTitle {
            grid-row: 1;
            grid-column: 1;
            margin-top: 30px;
            text-decoration: none;
            text-align: center;
            font-size: 20px;
            font-weight: 800;
            text-transform: uppercase;
        }

        .wrapper .navBarContainer .navLink {
            grid-row: 1;
            text-decoration: none;
            text-align: center;
            margin-top: 20px;
            font-family: 'Oswald', sans-serif;
            font-size: 14px;
            font-weight: 200;
            text-transform: uppercase;
            color: black;
        }

    .wrapper > .navBarContainer .navLink:hover {
        border-bottom: 4px solid red;
    }

    .wrapper > .navBarContainer .navLink:visited {
        color: black;
        background-color: red;
    }

    .wrapper .subMenu {
        grid-row: 2;
        grid-column: 1;
        position: static;
        top: 80px;
        display: grid;
        grid-template-rows: 40px 40px;
        grid-template-columns: 1fr 5fr;
    }

        .wrapper .subMenu .subLink {
            color: black;
            font-weight: bolder;
            font-size: 16px;
            text-decoration: none;
            text-transform: uppercase;
            grid-column: 2;
        }

            .wrapper .subMenu .subLink:hover {
                border-bottom: 2px solid blue;
            }

    .wrapper .mainWrapper {
        grid-row: 2;
        grid-column: 2 / span 1;
        display: grid;
        grid-template-rows: 80px auto;
        grid-template-columns: 1fr 5fr 1fr;
    }

        .wrapper .mainWrapper .title {
            grid-row: 1;
            grid-column: 2;
            text-align: center;
        }

        .wrapper .mainWrapper .links {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }


            .wrapper .mainWrapper .links .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .about {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: 180px auto;
            grid-template-columns: 1fr 3fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .about .image {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

            .wrapper .mainWrapper .about .content {
                grid-row: 1;
                grid-column: 2;
                text-align: left;
            }

        .wrapper .mainWrapper .services {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .services .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .contactUs {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .contactUs .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .LocalCommunity {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .LocalCommunity .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .WiderCommunity {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .WiderCommunity .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .meetTheTeam {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .meetTheTeam .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .history {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .history .content {
                grid-row: 1;
                grid-column: 1;
                text-align: left;
            }

        .wrapper .mainWrapper .welcome {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-rows: auto;
            grid-template-columns: 1fr;
            padding-bottom: 20px;
        }

            .wrapper .mainWrapper .welcome .image {
                grid-row: 1;
                grid-column: 1;
                text-align: center;
            }

            .wrapper .mainWrapper .welcome .content {
                grid-row: 2;
                grid-column: 1;
                text-align: center;
            }

        .wrapper .mainWrapper .table {
            grid-row: 2;
            grid-column: 2;
            display: grid;
            grid-template-columns: repeat(3, 150px);
            grid-template-rows: repeat(52, 40px);
            padding-bottom: 20px;
            grid-auto-flow: row;
            align-items: stretch;
            align-content: space-around;
            justify-items: stretch;
            justify-content: center;
        }

            .wrapper .mainWrapper .table .fieldOne {
                display: grid;
                justify-content: center;
                align-items: center;
                border: solid 1px lightgray;
            }

            .wrapper .mainWrapper .table .fieldTwo {
                display: grid;
                justify-content: center;
                align-items: center;
                border: solid 1px lightgray;
            }

            .wrapper .mainWrapper .table .fieldThree {
                display: grid;
                justify-content: center;
                align-items: center;
                border: solid 1px lightgray;
            }

            .wrapper .mainWrapper .table .table-header {
                justify-content: center;
                align-items: center;
                font-weight: 900;
                text-transform: uppercase;
                border: solid 1px lightgray;
            }

    .wrapper .footer {
        background-color: whitesmoke;
        grid-row: 3;
        grid-column: 1 / span 3;
        text-align: center;
    }

